# nltsecret

./: README.md  pyproject.toml
example/: read.py
extbuild/funsecret-snapshot/: pyproject.toml
extbuild/nltsecret-snapshot/: pyproject.toml
extbuild/nltsecret-snapshot/src/funsecret/snapshot/: snapshot.py
src/nltsecret/: __init__.py  cli.py
src/nltsecret/secret/: __init__.py  cache_secret.py  secret.py
