[project]
name = "nltsecret"
version = "1.4.70"
description = "nltsecret"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "cryptography>=43.0.3", "nltcache>=1.0.7", "nltlog>=1.0.14", "orjson>=3.10.10", "sqlalchemy>=2.0.35", "tqdm>=4.67.0",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/nltsecret"
Releases = "https://github.com/farfarfun/nltsecret/releases"

[project.optional-dependencies]
mysql = [ "pymysql>=1.1.1", "mysqlclient>=2.2.7",]

[tool.setuptools]
license-files = []

[tool.uv.workspace]
members = [ "extbuild/nltsecret-snapshot",]
