[project]
name = "funsecret-snapshot"
version = "1.4.70"
description = "funsecret"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funsecret", "funtable>=1.0.8",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funsecret"
Releases = "https://github.com/farfarfun/funsecret/releases"

[tool.setuptools]
license-files = []

[tool.uv.sources.funsecret]
workspace = true
