[project]
name = "nltsecret-snapshot"
version = "1.4.72"
description = "nltsecret"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "nltsecret", "funtable>=1.0.8",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/nltsecret"
Releases = "https://github.com/farfarfun/nltsecret/releases"

[tool.setuptools]
license-files = []

[tool.uv.sources.nltsecret]
workspace = true
